--- a/HuurautoService/HuurautoService.csproj
+++ b/HuurautoService/HuurautoService.csproj
@@ -8,8 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.13.2" />
     <PackageReference Include="Polly" Version="7.2.2" />
     <PackageReference Include="RabbitMQ.Client" Version="6.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="MongoDB.Driver, Version=2.13.2.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\..\..\.nuget\packages\mongodb.driver\2.13.2\lib\netstandard2.1\MongoDB.Driver.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
